[B]Retrospect v5.1.3 - Changelog - 2019-12-20[/B]

This update mainly contains channel fixes for the SVT and UR Play channel.

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
* Changed: Added more view modes to the channel listings (Fixes #1268)
* Fixed: Don't set dates in titles for Kodi Leia and up (See #1271)
* Fixed: Don't show the '.:' in front of favourites (See #1271)

[B]Channel related[/B]
* Fixed: SVT "trailer" type was not recognised
* Fixed: Timestamp issue with SVT
* Fixed: SVT live streams (Fixes #1266)
* Fixed: UR Play did not list (Fixes #1267)
* Updated: thumbs/fanart for SVT, TV4 and DPlay (See #1268)
* Added: Add season/episode info instead of "del #" to TV4 (See #1271)
* Added: Expire date to TV4 items (See #1271 and Fixes #1269)
* Added: Duration to TV4 shows (See #1271)