@@ -1,7 +1,10 @@
 ﻿[B]Changelog[/B]
-* Added: Viafree's MTV and National Geographic channels (Fixes #1229)
+* Updated: Artwork for ViaFree (Fixes #1272)
+* Added: Expire date for ViaFree (Fixes #1272)
+* Changed: Moved to sXXeXX for seasons for ViaFree (Fixes #1272)
 
 [I]Previous changes[/I]
+* Added: Viafree's MTV and National Geographic channels (Fixes #1229)
 * Fixed: ViaFree changed their JSON...again...and again...and broke the main listing (Fixes #1163)
 * Fixed: ViaFree changed their JSON....again....and broke the main listing (Fixes #1163)
 * Fixed: ViaFree changed their JSON and broke the main listing (Fixes #1139)
